<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10sp"
        android:orientation="vertical" 
        />
   
    <TextView android:id="@+id/text1"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:text="@string/text1"
    />
    <EditText android:id="@+id/edit1"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:hint="@string/hint1"
    />
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10sp" 
        android:orientation="vertical"
        />
    
    <TextView android:id="@+id/text2"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:text="@string/text2"
    />
    <EditText android:id="@+id/edit2"
              android:layout_height="50sp"
              android:layout_width="match_parent"
              android:hint="@string/hint2"
    />
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10sp" 
        android:orientation="vertical"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/button1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/button1"
        />
        <Button 
            android:id="@+id/button2"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/button2"
        /> 
    </LinearLayout>
    
</LinearLayout>